updated fonts on about and navbar components.

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .styled-nav-header {
     color: white;
     background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
