--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
 body {
   background-image: url("./images/interlaced.png");
 }
+
+.styled-header {
+  color: #4aaaa5;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
